# langgraph-multi-agent

./: .env-template  .gitignore  DESIGN.md  Dockerfile  README.md  main.py  pyproject.toml
agents/: config.py  graph.py  tools.py
docs/: incident-hallucination.md
tests/: test_grounding.py  test_hitl.py  test_termination.py
