[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[project]
name = "langgraph-multi-agent"
version = "0.1.0"
description = "Multi-agent research assistant built with LangGraph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-groq>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-community>=0.3",
    "ddgs>=9.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
research-assistant = "main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
